include/altdss/capi/dss.h

    /*! 
    Complex array of Ysc matrix at bus. Column by column.
    */
    ALTDSS_CAPI_DLL void Bus_Get_YscMatrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_YscMatrix but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void Bus_Get_YscMatrix_GR(void);
    /*! 
    Indicates whether a coordinate has been defined for this bus
    */
    ALTDSS_CAPI_DLL uint16_t Bus_Get_Coorddefined(void);
    /*! 
    X Coordinate for bus (double)
    */
    ALTDSS_CAPI_DLL double Bus_Get_x(void);
    /*! 
    X Coordinate for bus (double)
    */
    ALTDSS_CAPI_DLL void Bus_Set_x(double Value);
    /*! 
    Y coordinate for bus(double)
    */
    ALTDSS_CAPI_DLL double Bus_Get_y(void);
    /*! 
    Y coordinate for bus(double)
    */
    ALTDSS_CAPI_DLL void Bus_Set_y(double Value);
    /*! 
    Distance from EnergyMeter (if non-zero)
    */
    ALTDSS_CAPI_DLL double Bus_Get_Distance(void);
    ALTDSS_CAPI_DLL int32_t Bus_GetUniqueNodeNumber(int32_t StartNumber);
    /*! 
    Complex Double array of Sequence Voltages (0, 1, 2) at this Bus.
    */
    ALTDSS_CAPI_DLL void Bus_Get_CplxSeqVoltages(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_CplxSeqVoltages but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void Bus_Get_CplxSeqVoltages_GR(void);
    /*! 
    Average interruption duration, hr.
    */
    ALTDSS_CAPI_DLL double Bus_Get_Int_Duration(void);
    /*! 
    Accumulated failure rate downstream from this bus; faults per year
    */
    ALTDSS_CAPI_DLL double Bus_Get_Lambda(void);
    /*! 
    Accumulated customer outage durations
    */
    ALTDSS_CAPI_DLL double Bus_Get_Cust_Duration(void);
    /*! 
    Annual number of customer-interruptions from this bus
    */
    ALTDSS_CAPI_DLL double Bus_Get_Cust_Interrupts(void);
    /*! 
    Total numbers of customers served downline from this bus
    */
    ALTDSS_CAPI_DLL int32_t Bus_Get_N_Customers(void);
    /*! 
    Number of interruptions this bus per year
    */
    ALTDSS_CAPI_DLL double Bus_Get_N_interrupts(void);
    /*! 
    Returns Complex array of pu L-L voltages for 2- and 3-phase buses. Returns -1.0 for 1-phase bus. If more than 3 phases, returns only 3 phases.
    */
    ALTDSS_CAPI_DLL void Bus_Get_puVLL(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_puVLL but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void Bus_Get_puVLL_GR(void);
    /*! 
    For 2- and 3-phase buses, returns array of complex numbers representing L-L voltages in volts. Returns -1.0 for 1-phase bus. If more than 3 phases, returns only first 3.
    */
    ALTDSS_CAPI_DLL void Bus_Get_VLL(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_VLL but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void Bus_Get_VLL_GR(void);
    /*! 
    Array of doubles containing voltage magnitude, angle (degrees) pairs in per unit
    */
    ALTDSS_CAPI_DLL void Bus_Get_puVmagAngle(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_puVmagAngle but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void Bus_Get_puVmagAngle_GR(void);
    /*! 
    Array of doubles containing voltages in Magnitude (VLN), angle (degrees)
    */
    ALTDSS_CAPI_DLL void Bus_Get_VMagAngle(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Bus_Get_VMagAngle but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void Bus_Get_VMagAngle_GR(void);
    /*! 
    Total length of line downline from this bus, in miles. For recloser siting algorithm.
    */
    ALTDSS_CAPI_DLL double Bus_Get_TotalMiles(void);
    /*! 
    Integer ID of the feeder section in which this bus is located.
    */
    ALTDSS_CAPI_DLL int32_t Bus_Get_SectionID(void);
    
    /*! 
    Array of strings: Full Names of LINE elements connected to the active bus.
    */
    ALTDSS_CAPI_DLL void Bus_Get_LineList(char*** ResultPtr, int32_t* ResultDims);
    
    /*! 
    Array of strings: Full Names of LOAD elements connected to the active bus.
    */
    ALTDSS_CAPI_DLL void Bus_Get_LoadList(char*** ResultPtr, int32_t* ResultDims);
    /*! 
    Set the next bus as active. Returns -1 if no more buses, 0 otherwise.
    
    (API Extension)
    */
    ALTDSS_CAPI_DLL int32_t Bus_Get_Next(void);