src/CAPI/CAPI_Bus.pas


procedure Bus_Get_YscMatrix_GR(); CDECL;
// Same as Bus_Get_YscMatrix but uses global result (GR) pointers
begin
    Bus_Get_YscMatrix(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
function Bus_Get_Coorddefined(): TAPIBoolean; CDECL;
var
    pBus: TDSSBus;
begin
    Result := FALSE;
    if not _activeObj(DSSPrime, pBus) then
        Exit;
    if pBus.CoordDefined then
                Result := TRUE;
end;
//------------------------------------------------------------------------------
function Bus_Get_x(): Double; CDECL;
var
    pBus: TDSSBus;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, pBus) then
        Exit;
    if pBus.CoordDefined then
        Result := pBus.x;
end;
//------------------------------------------------------------------------------
procedure Bus_Set_x(Value: Double); CDECL;
var
    pBus: TDSSBus;
begin
    if not _activeObj(DSSPrime, pBus) then
        Exit;
    pBus.CoordDefined := TRUE;
    pBus.x := Value;
end;
//------------------------------------------------------------------------------
function Bus_Get_y(): Double; CDECL;
var
    pBus: TDSSBus;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, pBus) then
        Exit;
    if pBus.CoordDefined then
        Result := pBus.y;
end;
//------------------------------------------------------------------------------
procedure Bus_Set_y(Value: Double); CDECL;
var
    pBus: TDSSBus;
begin
    if not _activeObj(DSSPrime, pBus) then
        Exit;
    pBus.CoordDefined := TRUE;
    pBus.y := Value;
end;
//------------------------------------------------------------------------------
function Bus_Get_Distance(): Double; CDECL;
var
    pBus: TDSSBus;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, pBus) then
        Exit;
    Result := pBus.DistFromMeter;
end;
//------------------------------------------------------------------------------
function Bus_GetUniqueNodeNumber(StartNumber: Integer): Integer; CDECL;
var
    pBus: TDSSBus;
begin
    Result := 0;
    if not _activeObj(DSSPrime, pBus) then
        Exit;

    Result := DSSPrime.ActiveCircuit.GetUniqueNodeNumber(pBus, StartNumber);
end;
//------------------------------------------------------------------------------
procedure Bus_Get_CplxSeqVoltages(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
// Compute sequence voltages for Active Bus
// Complex values
// returns a set of seq voltages (3) in 0, 1, 2 order
var
    pBus: TDSSBus;
begin
    if not _activeObj(DSSPrime, pBus) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    Alt_Bus_Get_ComplexSeqVoltages(DSSPrime, ResultPtr, ResultCount, pBus);
end;

procedure Bus_Get_CplxSeqVoltages_GR(); CDECL;
// Same as Bus_Get_CplxSeqVoltages but uses global result (GR) pointers
begin
    Bus_Get_CplxSeqVoltages(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
function Bus_Get_Int_Duration(): Double; CDECL;
var
    pBus: TDSSBus;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, pBus) then
        Exit;

    Result := pBus.Bus_Int_Duration;
end;
//------------------------------------------------------------------------------
function Bus_Get_Lambda(): Double; CDECL;
var
    pBus: TDSSBus;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, pBus) then
        Exit;

    Result := pBus.BusFltRate;
end;
//------------------------------------------------------------------------------
function Bus_Get_Cust_Duration(): Double; CDECL;
var
    pBus: TDSSBus;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, pBus) then
        Exit;

    Result := pBus.BusCustDurations;
end;
//------------------------------------------------------------------------------
function Bus_Get_Cust_Interrupts(): Double; CDECL;
var
    pBus: TDSSBus;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, pBus) then
        Exit;

    Result := pBus.BusCustInterrupts;
end;
//------------------------------------------------------------------------------
function Bus_Get_N_Customers(): Integer; CDECL;
var
    pBus: TDSSBus;
begin
    Result := 0;
    if not _activeObj(DSSPrime, pBus) then
        Exit;

    Result := pBus.BusTotalNumCustomers;
end;
//------------------------------------------------------------------------------
function Bus_Get_N_interrupts(): Double; CDECL;
var
    pBus: TDSSBus;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, pBus) then
        Exit;

    Result := pBus.Bus_Num_Interrupt;
end;
//------------------------------------------------------------------------------
procedure Bus_Get_puVLL(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    pBus: TDSSBus;
begin
    if not _activeObj(DSSPrime, pBus) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    Alt_Bus_Get_puVLL(DSSPrime, ResultPtr, ResultCount, pBus);
end;

procedure Bus_Get_puVLL_GR(); CDECL;
// Same as Bus_Get_puVLL but uses global result (GR) pointers
begin
    Bus_Get_puVLL(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
procedure Bus_Get_VLL(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    pBus: TDSSBus;
begin
    if not _activeObj(DSSPrime, pBus) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    Alt_Bus_Get_VLL(DSSPrime, ResultPtr, ResultCount, pBus);
end;

procedure Bus_Get_VLL_GR(); CDECL;
// Same as Bus_Get_VLL but uses global result (GR) pointers
begin
    Bus_Get_VLL(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
procedure Bus_Get_puVmagAngle(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
// Return mag/angle for all nodes of voltages for Active Bus
var
    pBus: TDSSBus;
begin
    if not _activeObj(DSSPrime, pBus) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    Alt_Bus_Get_puVMagAngle(DSSPrime, ResultPtr, ResultCount, pBus);
end;

procedure Bus_Get_puVmagAngle_GR(); CDECL;
// Same as Bus_Get_puVmagAngle but uses global result (GR) pointers
begin
    Bus_Get_puVmagAngle(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;
//------------------------------------------------------------------------------
procedure Bus_Get_VMagAngle(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
// Return mag/angle for all nodes of voltages for Active Bus
var
    pBus: TDSSBus;
begin
    if not _activeObj(DSSPrime, pBus) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    Alt_Bus_Get_VMagAngle(DSSPrime, ResultPtr, ResultCount, pBus);
end;

procedure Bus_Get_VMagAngle_GR(); CDECL;
// Same as Bus_Get_VMagAngle but uses global result (GR) pointers
begin
    Bus_Get_VMagAngle(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;
//------------------------------------------------------------------------------
function Bus_Get_TotalMiles(): Double; CDECL;
var
    pBus : TDSSBus;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, pBus) then
        Exit;
    Result := pBus.BusTotalMiles;
end;
//------------------------------------------------------------------------------
function Bus_Get_SectionID(): Integer; CDECL;
var
    pBus : TDSSBus;
begin
    Result := 0;
    if not _activeObj(DSSPrime, pBus) then
        Exit;
    Result := pBus.BusSectionID;
end;
//------------------------------------------------------------------------------
function Bus_Get_Next(): Integer; CDECL;
var
    BusIndex: Integer;
begin
    Result := -1;   // Signifies Error
    if InvalidCircuit(DSSPrime) then
        Exit;
    BusIndex := DSSPrime.ActiveCircuit.ActiveBusIndex + 1;
    if (BusIndex > 0) and (BusIndex <= DSSPrime.ActiveCircuit.Numbuses) then
    begin
        DSSPrime.ActiveCircuit.ActiveBusIndex := BusIndex;
            Result := 0;
        end;
    end;
//------------------------------------------------------------------------------
function CheckBusReference(cktElem: TDSSCktElement; BusReference: Integer; var TerminalIndex: Integer): Boolean;
// Check all terminals of cktelement to see if bus connected to busreference
var
    i: Integer;
begin
    Result := FALSE;
    for i := 1 to cktElem.NTerms do
    begin
        if cktElem.Terminals[i - 1].BusRef = BusReference then
        begin
            TerminalIndex := i;
            Result := TRUE;
            Break;
        end;
    end;
end;

procedure Bus_Get_LineList(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
// Returns list of LINE elements connected to this bus
var
    BusReference, j, k, LineCount: Integer;
    pElem: TDSSCktElement;
    Result: PPAnsiCharArray0;
    pBus: TDSSBus;
begin
    if not _activeObj(DSSPrime, pBus) then
    begin
        DefaultResult(ResultPtr, ResultCount, '');
        Exit;
    end;

    BusReference := DSSPrime.ActiveCircuit.ActiveBusIndex;
    // Count number of Lines connected to this bus
    LineCount := 0;
    for pElem in DSSPrime.ActiveCircuit.Lines do
    begin
        if CheckBusReference(pElem, BusReference, j) then
            Inc(LineCount);
    end;

    if LineCount <= 0 then
    begin
        DefaultResult(ResultPtr, ResultCount, '');
        Exit;
    end;

    //TODO: save list of elements to avoid a second loop through them all?

    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, LineCount);
    k := 0;
    for pElem in DSSPrime.ActiveCircuit.Lines do
    begin
        if CheckBusReference(pElem, BusReference, j) then
        begin
            Result[k] := DSS_CopyStringAsPChar('LINE.' + pElem.name);
            Inc(k);
        end;
    end;
end;

procedure Bus_Get_LineList_GR(); CDECL;
// Same as Bus_Get_LineList but uses global result (GR) pointers
begin
    Bus_Get_LineList(DSSPrime.GR_DataPtr_PPAnsiChar, @DSSPrime.GR_Counts_PPAnsiChar[0])
end;

//------------------------------------------------------------------------------
procedure Bus_Get_LoadList(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
// Returns list of LOAD elements connected to this bus
var
    BusReference, j, k, LoadCount: Integer;
    pElem: TDSSCktElement;
    Result: PPAnsiCharArray0;
    pBus : TDSSBus;
begin
    if not _activeObj(DSSPrime, pBus) then
    begin
        DefaultResult(ResultPtr, ResultCount, '');
        Exit;
    end;

    BusReference := DSSPrime.ActiveCircuit.ActiveBusIndex;
    // Count number of LOAD elements connected to this bus
    LoadCount := 0;
    for pElem in DSSPrime.ActiveCircuit.Loads do
    begin
        if CheckBusReference(pElem, BusReference, j) then
            Inc(LoadCount);
    end;

    if LoadCount <= 0 then
    begin
        DefaultResult(ResultPtr, ResultCount, '');
        Exit;
    end;

    //TODO: save list of elements to avoid a second loop through them all?

    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, LoadCount);
    k := 0;
    for pElem in DSSPrime.ActiveCircuit.Loads do
    begin
        if CheckBusReference(pElem, BusReference, j) then
        begin
            Result[k] := DSS_CopyStringAsPChar('LOAD.' + pElem.name);
            Inc(k);
        end;
    end;
end;
